--- a/estilos/phone.css
+++ b/estilos/phone.css
@@ -4,6 +4,7 @@
     --cor1: #FF9298;
     --cor2: #84122B;
     --cor3: #F0A9B0;
+    --cor4: #FE6E65;
 }
 *{
     margin: 0px;
@@ -11,8 +12,8 @@
     font-family: Arial, Helvetica, sans-serif;
 }
 body{
-    background-image: linear-gradient(45deg, #ff929898,#84122b);
-    width: 98vw;
+    background-image: linear-gradient(45deg, #ff929898,#FE6E65,#84122b);
+    width: 100vw;
     height: 100vh;
 }
 section h1{
@@ -56,11 +57,18 @@ img#msg{
 }
 #esqueci{
     border: 1px solid #84122b;
-    margin: 0px 13px;
+    margin: 0px 10px;
     border-radius: 5px;
     text-align: center;
     font-family: Verdana, Geneva, Tahoma, sans-serif;
     
+}
+input[type="email"]{
+    width: 280px;
+    height: 30px;
+    border-radius: 6px;
+    background-color: #f0a9b031;
+
 }
 input[type="submit"]{
     margin: auto;
