--- a/estilos/phone.css
+++ b/estilos/phone.css
@@ -9,7 +9,7 @@
 *{
     margin: 0px;
     padding: 0px;
-    font-family: Arial, Helvetica, sans-serif;
+    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
 body{
     background-image: linear-gradient(45deg, #ff929898,#FE6E65,#84122b);
