--- a/feito-em-aula/estilos/style.css
+++ b/feito-em-aula/estilos/style.css
@@ -37,6 +37,9 @@ section#login{
     height: 500px;
     border-radius: 20px;
     overflow: hidden;
+
+    transition: width .3s, height .3s;
+    transition-timing-function: ease;
 }
 section#login > div#imagem{
     background: url(../imagens/fundo.jpg);
@@ -47,4 +50,11 @@ section#login > div#imagem{
 section#login > div#formulario{
     padding: 10px;
     display: block;
+}
+div#formulario > h1{
+    text-align: center;
+    margin-bottom: 10px;
+}
+div#formulario > p{
+    font-size: 0.8em;
 }
