--- a/estilos/style.css
+++ b/estilos/style.css
@@ -34,7 +34,7 @@ section#login{
 
     background-color: white;
     width: 250px;
-    height: 500px;
+    height: 515px;
     border-radius: 20px;
     overflow: hidden;
 
@@ -56,5 +56,48 @@ div#formulario > h1{
     margin-bottom: 10px;
 }
 div#formulario > p{
+    font-size: 0.8em;
+}
+form > div.campo{
+    display: block;
+    background-color: #B9B9B9;
+    width: 100%;
+    height: 40px;
+    border-radius: 5px;
+    margin: 5px 0px;
+    
+}
+input[type="submit"]{
+    display: block;
+    font-size: 1em;
+    width: 100%;
+    height: 40px;
+    background-color: var(--cor5);
+    color: white;
+    border-radius: 5px;
+    border: none;
+    cursor: pointer;
+}
+input[type="submit"]:hover{
+    background-color: #252525;
+}
+form > a.botao{
+    display: block;
+    font-size: 1em;
+    width: 100%;
+    height: 40px;
+    padding-top: 5px;
+    margin-top: 5px;
+    text-align: center;
+    background-color: white;
+    color: #252525;
+    border-radius: 5px;
+    border: 1px solid #B9B9B9;
+    text-decoration: none;
+}
+form > a.botao:hover{
+    background-color: #8C8C8C;
+}
+form > a.botao > span{
     font-size: 0.8em;
 }
