--- a/estilos/style.css
+++ b/estilos/style.css
@@ -63,9 +63,24 @@ form > div.campo{
     background-color: #B9B9B9;
     width: 100%;
     height: 40px;
-    border-radius: 5px;
+    border-radius: 50px;
     margin: 5px 0px;
-    
+}
+div.campo > span{
+    color: #252525;
+    font-size: 2em;
+    width: 40px;
+    padding: 5px;
+}
+div.campo > input{
+    background-color: #8C8C8C;
+    width: calc(100% - 46px);
+    transform: translateY(-12px);
+    font-size: 0.8em;
+    height: 100%;
+    border-radius: 50px;
+    padding: 5px;
+    border: 2px solid #252525
 }
 input[type="submit"]{
     display: block;
