--- a/estilos/style.css
+++ b/estilos/style.css
@@ -29,7 +29,6 @@ section#login{
     position: absolute;
     top: 50%;
     left: 50%;
-    transform: translate(-50%, -50%);
     box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.527);
 
     background-color: white;
@@ -40,6 +39,7 @@ section#login{
 
     transition: width .3s, height .3s;
     transition-timing-function: ease;
+    transform: translate(-50%, -50%);
 }
 section#login > div#imagem{
     background: url(../imagens/fundo.jpg);
@@ -75,12 +75,12 @@ div.campo > span{
 div.campo > input{
     background-color: #8C8C8C;
     width: calc(100% - 46px);
-    transform: translateY(-12px);
     font-size: 0.8em;
     height: 100%;
     border-radius: 50px;
     padding: 5px;
-    border: 2px solid #252525
+    border: 2px solid #252525;
+    transform: translateY(-12px);
 }
 input[type="submit"]{
     display: block;
